_posts/v0.49/data-modeling/start.md
---
version: v0.49
has_magic_breadcrumbs: true
show_category_breadcrumb: true
show_title_breadcrumb: false
category: 'Data Modeling'
title: 'Data modeling overview'
source_url: 'https://github.com/metabase/metabase/blob/master/docs/data-modeling/start.md'
layout: new-docs
---

# Data modeling overview

Metabase provides tools for organizing your data and making it easier for people to understand.

## [Models](./models)

Models curate data from another table or tables from the same database to anticipate the kinds of questions people will ask of the data. You can think of them as derived tables, or a special kind of saved question meant to be used as the starting point for new questions.

## [Table metadata admin settings](./metadata-editing)

Guide people to the right data by adding display names, hiding outdated tables, configuring filter types, and more.

## [Field types](./field-types)

Field types dictate how Metabase displays its data, as well as the column’s special functionality, if any.

## [Setting default formatting for your data](./field-types)

Define formatting and display defaults for numbers, currencies, datetimes, and more.

## [Working with JSON](./json-unfolding)

Metabase can unfold JSON columns into their component fields, which you can then filter on using the query builder.

## [Creating segments and metrics](./segments-and-metrics)

Admins can define segments to create official filters for your data, and metrics for official aggregations.
